--- a/src/components/OrderView/index.css
+++ b/src/components/OrderView/index.css
@@ -1,3 +1,9 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
 .content {
     text-align: center;
     margin-top: 20px;
