--- a/src/components/TokenAmount/index.css
+++ b/src/components/TokenAmount/index.css
@@ -1,11 +1,20 @@
 .amount-diff-highlight {
-    background: rgba(255, 0, 0, 0.28);
+    background: rgba(255, 0, 0, 0.2);
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-weight: 600;
 }
 
 .amount-diff-highlight_yellow {
-    background: rgba(255, 166, 0, 0.28);
+    background: rgba(255, 166, 0, 0.2);
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-weight: 600;
 }
 
 .amount-diff-highlight_green {
-    background: rgba(123, 255, 0, 0.28);
+    background: rgba(123, 255, 0, 0.2);
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-weight: 600;
 }
