--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
 
   /* SEMANTIC COLORS */
   --color-error: #ff6a6a;
-  --color-error-bg: #bd6464;
+  --color-error-bg: #8b3a3a;
   --color-warning: #ff9800;
   --color-warning-bg: rgb(255, 239, 203);
   --color-success: #4caf50;
